# juno-60

./: .gitignore  IMPLEMENTATION.md  Makefile  README.md  test.scd  test2.scd
.github/workflows/: build.yml  ci.yml
junox/: .eslintignore  .eslintrc.json  .gitignore  .prettierrc.js  README.md  package.json
junox/.github/workflows/: codeql-analysis.yml
junox/demo/: NexusUI.js  benchmark.html  juno60-chorus.html  juno60-dco.html  juno60-envelope.html  juno60-filterResponse.html  juno60-lfo.html  juno60-nexusUI.css  juno60-nexusUI.html  nexusui-helper.js  temp1.html  temp2.html
junox/patches/: Juno106.xlsx  Juno60.csv  Juno60.js  Juno60.xlsx
junox/src/: midiAdapter.js  midiConsumer.js  patches.js  synth.constants.js  synth.node.js  synth.worklet.js
junox/src/junox/: abstractEnvelope.js  biquad.js  chorus.js  dco.js  juno60Envelope.js  junox.js  junoxWorkletController.js  ladderFilter.js  lfo.js  lfoWithEnvelope.js  noise.js  parameterReader.js  ringBuffer.js  simpleSinglePoleFilter.js  smoothMoves.js  utils.mjs  voice.js
junox/tests/: utils.test.mjs
sc-plugin/: CMakeLists.txt  Juno60.sc  README.md  test_juno60.scd
sc-plugin/include/: Chorus.hpp  Juno60DCO.hpp  Juno60Envelope.hpp  Junox.hpp  LFO.hpp  LFOWithEnvelope.hpp  LadderFilter.hpp  Noise.hpp  RingBuffer.hpp  SimpleSinglePoleFilter.hpp  SmoothMoves.hpp  Utils.hpp  Voice.hpp
sc-plugin/src/: Juno60.cpp
